Changed Login According to Crypo theme
